# rocon_devices

./: .gitignore  .project  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
msg/: Hue.msg  HueArray.msg  HueState.msg  RequestHue.msg
rocon_auto_door/: CMakeLists.txt  README.md  package.xml
rocon_auto_door/arduino_firmware/arduino_fw_restful_bridge/: arduino_fw_restful_bridge.ino
rocon_auto_door/launch/: auto_door.launch
rocon_auto_door/scripts/: auto_door.py
rocon_device_tools/rocon_iot_bridge/: CHANGELOG.rst  CMakeLists.txt  package.xml
rocon_device_tools/rocon_iot_bridge/env-hooks/: 25.rocon-iot-bridge.sh.em
rocon_device_tools/rocon_iot_bridge/scripts/: ninjablock_bridge.py  smartthings_bridge.py
rocon_device_tools/rocon_iot_bridge/src/rocon_iot_bridge/: connector.py  rocon_iot_bridge.py
rocon_device_tools/rocon_python_hue/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
rocon_device_tools/rocon_python_hue/src/rocon_python_hue/: exceptions.py  phue.py
rocon_device_tools/rtsp_camera_driver/rtsp_camera_driver_cpp/: CMakeLists.txt  package.xml
rocon_device_tools/rtsp_camera_driver/rtsp_camera_driver_cpp/src/: main.cpp
rocon_device_tools/rtsp_camera_driver/rtsp_camera_driver_python/: package.xml
rocon_device_tools/rtsp_camera_driver/rtsp_camera_driver_python/script/: rtsp_camera_driver.py
rocon_devices/: CHANGELOG.rst  CMakeLists.txt  package.xml
rocon_hue/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
rocon_hue/launch/: hue_bridge.launch  hue_bridge_server.launch  hue_manager.launch
rocon_hue/msg/: Hue.msg  HueArray.msg
rocon_hue/rapps/hue_bridge/: hue_bridge.interface  hue_bridge.launch  hue_bridge.rapp
rocon_hue/scripts/: dummy_client.py  hue_manager.py  rocon_hue_bridge.py  server.py  test.py
rocon_hue/src/rocon_hue/: __init__.py  exceptions.py  hue_bridge.py  hue_manager.py  phue.py
rocon_iot_bridge/: CMakeLists.txt  package.xml  setup.py
rocon_iot_bridge/env-hooks/: 25.rocon-iot-bridge.sh.em
rocon_iot_bridge/launch/: ninjablock_bridge.launch  smartthings_bridge.launch
rocon_iot_bridge/resources/ninjablock/: default.json
rocon_iot_bridge/resources/smartthings/: default.json  smartthings.groovy  test_code.py
rocon_iot_bridge/scripts/: ninjablock_bridge.py  smartthings_bridge.py
rocon_iot_bridge/src/rocon_iot_bridge/: __init__.py  connector.py  rocon_iot_bridge.py
rocon_ip_camera/rtsp_camera_driver/rtsp_camera_driver_cpp/src/: main.cpp
rocon_ninja_block/: CMakeLists.txt  package.xml  setup.py
rocon_ninja_block/launch/: nb_bridge.launch
rocon_ninja_block/scripts/: nb_bridge.py
rocon_ninja_block/src/rocon_ninja_block/: __init__.py  ninja_block_bridge.py
rocon_ninjablock_bridge/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
rocon_ninjablock_bridge/env-hooks/: 25.rocon-ninjablock-bridge.sh.em
rocon_ninjablock_bridge/launch/: ninjablock_bridge.launch
rocon_ninjablock_bridge/rapps/room_checker_ninjablock/: room_checker_ninjablock.launch  room_checker_ninjablock.parameters  room_checker_ninjablock.rapp
rocon_ninjablock_bridge/resources/: default.json
rocon_ninjablock_bridge/scripts/: ninjablock_bridge.py
rocon_rtsp_camera_relay/: CHANGELOG.rst  CMakeLists.txt  package.xml
rocon_rtsp_camera_relay/env-hooks/: 25.rocon-rtsp-camera-relay.sh.em
rocon_rtsp_camera_relay/include/rocon_rtsp_camera_relay/: rocon_foscam_control.hpp  rocon_rtsp_camera_relay.hpp
rocon_rtsp_camera_relay/launch/: rtsp_camera_relay.launch
rocon_rtsp_camera_relay/rapps/image_stream/: image_stream.launch  image_stream.launch.xml  image_stream.rapp
rocon_rtsp_camera_relay/rapps/rtsp_camera_relay/: rtsp_camera_relay.interface  rtsp_camera_relay.launch.xml  rtsp_camera_relay.parameters  rtsp_camera_relay.rapp
rocon_rtsp_camera_relay/rapps/video_teleop/: video_teleop.launch.xml  video_teleop.rapp
rocon_rtsp_camera_relay/src/: main.cpp  rocon_rtsp_camera_relay.cpp
rocon_smartthings_bridge/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
rocon_smartthings_bridge/env-hooks/: 25.rocon-smartthings-bridge.sh.em
rocon_smartthings_bridge/launch/: smartthings_bridge.launch
rocon_smartthings_bridge/resources/: smartthings.groovy
roshue/: CMakeLists.txt  package.xml  setup.py
roshue/msg/: HueState.msg
roshue/scripts/: roshue_bridge.py  test.py
roshue/src/roshue/: phue.py
rtsp_camera_driver/rtsp_camera_driver_python/: CMakeLists.txt
rtsp_camera_driver/rtsp_camera_driver_python/script/: rtsp_camera_driver.py
scripts/: random_colors.py  roshue.py  test.py
src/hue_controller/: __init__.py  phue.py
src/roshue/: __init__.py  exceptions.py  phue.py
