<?xml version="1.0"?>
<package>
  <name>rocon_devices</name>
  <version>0.0.5</version>
  <description>
    rocon devices meta package
  </description>
  <maintainer email="dwlee@yujinrobot.com">DongWook Lee</maintainer>
  <license>BSD</license>
  
  <url type="website">http://wiki.ros.org/rocon_devices</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_devices</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_devices/issues</url>
  <author>DongWook Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rocon_python_hue</run_depend>
  <run_depend>rocon_hue</run_depend>
  <run_depend>rocon_rtsp_camera_relay</run_depend>
  <run_depend>rocon_iot_bridge</run_depend>
  <run_depend>rocon_ninjablock_bridge</run_depend>
  <run_depend>rocon_smartthings_bridge</run_depend>
  <export>
    <metapackage/>
  </export>
</package>

