<?xml version="1.0"?>
<package>
  <name>rocon_hue</name>
  <version>0.1.0</version>
  <description>The rocon_hue package</description>
  
  <maintainer email="dwlee@yujinrobot.com">dwlee</maintainer>
  <author>DongWook Lee</author>
  <license>BSD</license>
 
  <url type="website"></url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_devices</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_devices/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>rospy</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>