<?xml version="1.0"?>
<package>
  <name>rocon_hue</name>
  <version>0.0.3</version>
  <description>
    phue wrapper package to use in rocon
  </description>
  
  <maintainer email="dwlee@yujinrobot.com">Dongwook Lee</maintainer>
  <author>DongWook Lee</author>
  <license>BSD</license>
 
  <url type="website">http://wiki.ros.org/rocon_hue</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_devices</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_devices/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>
  <run_depend>roslint</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rocon_device_msgs</run_depend>
  <run_depend>rocon_python_hue</run_depend>

  <export>
    <rocon_app>rapps/hue_bridge/hue_bridge.rapp</rocon_app>
  </export>
</package>
