<?xml version="1.0"?>
<package>
  <name>rocon_ninjablock_bridge</name>
  <version>0.0.0</version>
  <description>
    bridging the ninjablock devices and ROS
  </description>
  <maintainer email="dwlee@yujinrobot.com">Dongwook Lee</maintainer>

  <license>BSD</license>


  <url type="website">http://wiki.ros.org/rocon_ninjablock_bridge</url>

  <author>Dongwook Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rocon_iot_bridge</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rocon_iot_bridge</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rocon_std_msgs</run_depend>
  <run_depend>rocon_device_msgs</run_depend>
</package>
