<?xml version="1.0"?>
<package>
  <name>rocon_smartthings_bridge</name>
  <version>0.0.7</version>
  <description>
    Bridging between ROS and smartthings
  </description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rocon_smartthings_bridge</url>
  <author>Jihoon Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rocon_iot_bridge</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rocon_iot_bridge</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rocon_std_msgs</run_depend>
  <run_depend>rocon_device_msgs</run_depend>

</package>
