<?xml version="1.0"?>
<package>
  <name>rocon_python_hue</name>
  <version>0.0.0</version>
  <description>The rocon_python_hue package</description>

  <maintainer email="dwlee@yujinrobot.com">dwlee</maintainer>
  <url type="website">https://github.com/studioimaginaire/phue</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_devices</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_devices/issues</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <export>
  </export>
</package>